--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -1,10 +1,10 @@
-add_executable(say_hello
-  say_hello.cpp
+add_executable(main
+  main.cpp
 )
 
-target_link_libraries(say_hello
+target_link_libraries(main
   PRIVATE
-    libhello
+    libclean
 )
 
-target_compile_features(say_hello PRIVATE cxx_std_20)
+target_compile_features(main PRIVATE cxx_std_20)
