Updated CMake so it works on the cluster now

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,7 +5,7 @@ include(dependencies.cmake)
 
 add_library(libclean
   src/Robot.cpp
-  src/Room.cpp
+  src/room.cpp
   src/Task.cpp
   src/Simulation.cpp
 )
