--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,14 +1,17 @@
 set(THREADS_PREFER_PTHREAD_FLAG ON)
 find_package(Threads REQUIRED)
 
-add_executable(test
+find_package(Catch2 3 REQUIRED)
+
+add_executable(tests
   testing.cpp
 )
 
-target_link_libraries(main
+target_link_libraries(tests
   PRIVATE
     libclean
+    Catch2::Catch2WithMain
     Threads::Threads
 )
 
-target_compile_features(main PRIVATE cxx_std_20)
+target_compile_features(tests PRIVATE cxx_std_20)
